--- a/appz.yml
+++ b/appz.yml
@@ -1,17 +1,17 @@
 app:
     name: Vault
     code: VAULT
-    notify: appz@ecloudcontrol.com
+    notify: kullas@ecloudcontrol.com
 
 build:
-    version: 0.4
+    version: 1.16
     env: DEV
     build_file: none
     output_files: output/*.zip
-    image_template: vault-1.2
+    image_template: vault-1.16
 
 deploy:
-    context: alpha/DEV
+    context: krishna/DEV
     type: statefulset
     ingress: none
     replicas: 1
