--- a/appz.yml
+++ b/appz.yml
@@ -5,13 +5,13 @@ app:
 
 build:
     version: 0.4
-    env: UAT
+    env: DEV
     build_file: none
     output_files: output/*.zip
     image_template: vault-1.2
 
 deploy:
-    context: krishna/UAT
+    context: krishna-ullas/DEV
     type: statefulset
     ingress: none
     replicas: 1
